packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/spread-arg/input.js
import { Inter } from '@next/google-fonts'
fn(...{})
const a = fn(...{})
const inter = Inter(...{})
Inter(...{})
